#    This file is part of larz.
#
#    larz is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    larz is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with larz.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "larz"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Archive tool for efficient decompression."
repository = "https://github.com/Dirout/larz"
homepage = "https://github.com/Dirout/larz"
readme = "README"

[lib]
name = "larz"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "larz"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = { version = "3.0.0-beta.2", features = ["suggestions", "color", "wrap_help"] }
lazy_static = "1.4.0"
lz4_flex = { version = "0.8.2", default-features = false }
mimalloc = { version = "0.1.26", default-features = false }
stopwatch = "0.0.7"
tar = "0.4.37"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/larz", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/liblarz.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/larz/README", "644"],
    ["COPYING", "usr/share/doc/larz/COPYING", "644"],
]

[package.metadata.rpm]
package = "larz"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
dokkoo = { path = "/usr/bin/larz" }