#    This file is part of larz.
#
#    larz is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    larz is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with larz.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "larz"
version = "0.3.1"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
description = "Archive tool for efficient decompression."
repository = "https://github.com/Dirout/larz"
homepage = "https://github.com/Dirout/larz"
readme = "README"

[lib]
name = "larz"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "larz"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
argfile = "0.1.5"
clap = { version = "3.2.22", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
home = "0.5.4"
lazy_static = "1.4.0"
lz4_flex = { version = "0.9.5", features = ["checked-decode", "frame"] }
mimalloc = { version = "0.1.30", default-features = false }
path-clean = "0.1.0"
stopwatch = "0.0.7"
tar = "0.4.38"
wild = "2.1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/larz", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/liblarz.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/larz/README", "644"],
    ["COPYING", "usr/share/doc/larz/COPYING", "644"],
]

[package.metadata.rpm]
package = "larz"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
larz = { path = "/usr/bin/larz" }
