#    This file is part of larz.
#
#    larz is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    larz is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with larz.  If not, see <https://www.gnu.org/licenses/>.
[package]
name = "larz"
version = "0.3.2"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
description = "Archive tool for efficient decompression."
repository = "https://github.com/Dirout/larz"
homepage = "https://github.com/Dirout/larz"
readme = "README"

[lib]
name = "larz"
path = "src/lib.rs"
crate-type=["rlib", "cdylib", "staticlib"]

[[bin]]
name = "larz"
path = "src/main.rs"
doc = true
required-features = ["bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"], optional = true }
clean-path = { version = "0.2.1", optional = true }
home = { version = "0.5.9", optional = true }
lazy_static = { version = "1.4.0", optional = true }
lz4_flex = { version = "0.9.5", default-features = false }
mimalloc = { version = "0.1.39", default-features = false, optional = true }
tar = "0.4.40"
ticky = { git = "https://github.com/Dirout/ticky.git", optional = true }
wild = { version = "2.2.1", optional = true }

[features]
default = ["safe", "streaming"]
bin = ["dep:clap", "dep:clean-path", "dep:home", "dep:lazy_static", "dep:mimalloc", "dep:ticky", "dep:wild", "default"]
safe = ["lz4_flex/safe-encode", "lz4_flex/safe-decode", "lz4_flex/checked-decode"]
streaming = ["lz4_flex/frame"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/larz", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/liblarz.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/larz/README", "644"],
    ["COPYING", "usr/share/doc/larz/COPYING", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/larz", dest = "/usr/bin/larz", mode = "755" },
  { source = "target/release/liblarz.so", dest = "/usr/lib/liblarz.so", mode = "755" },
  { source = "target/release/liblarz.a", dest = "/usr/lib/liblarz.a", mode = "755" },
  { source = "README", dest = "/usr/share/doc/ticky/README", mode = "644" },
  { source = "COPYING", dest = "/usr/share/doc/ticky/COPYING", mode = "644" },
]
